workaround for SERVER-7459, processing of deleted records now optional