src/mongo/db/commands/storage_details.cpp
@@ -58,12 +58,13 @@ namespace {
         int granularity;
         int lastChunkLength;
         string characteristicField;
+        bool processDeletedRecords;
         bool showRecords;
         time_t startTime;
 
         AnalyzeParams() : startOfs(0), endOfs(INT_MAX), length(INT_MAX), numberOfChunks(0),
                           granularity(0), lastChunkLength(0), characteristicField("_id"),
-                          showRecords(false), startTime(time(NULL)) {
+                          processDeletedRecords(true), showRecords(false), startTime(time(NULL)) {
         }
     };
 
@@ -417,6 +418,8 @@ namespace {
             if (hasCharacteristicField) {
                 recordBuilder.append("characteristic", characteristicFieldValue);
             }
+            recordBuilder.doneFast(); //TODO(andrea.lattuada) can be removed when SERVER-7459
+                                      //                      is fixed
         }
     }
 
@@ -466,7 +469,7 @@ namespace {
      *           }, 
      *           ... (one element per record)
      *       ],
-     *       deletedRecords: [
+     *  (optional) deletedRecords: [
      *           { ofs: <offset from start of extent>,
      *             recBytes: <deleted record size>
      *           },
@@ -501,7 +504,13 @@ namespace {
                 r = dl.rec();
                 processRecord(dl, r, extentOfs, params, chunkData, recordsArrayBuilder.get());
             }
+            if (recordsArrayBuilder.get() != NULL) {
+                recordsArrayBuilder->doneFast(); //TODO(andrea.lattuada) can be removed when
+                                                 //                      SERVER-7459 is fixed
+            }
         }
+
+        bool processingDeletedRecords = !isCapped && params.processDeletedRecords;
 
         { // ensure done() is called by invoking destructor when done with the builder
             scoped_ptr<BSONArrayBuilder> deletedRecordsArrayBuilder;
@@ -510,7 +519,7 @@ namespace {
                         new BSONArrayBuilder(result.subarrayStart("deletedRecords")));
             }
 
-            if (!isCapped) {
+            if (processingDeletedRecords) {
                 for (int bucketNum = 0; bucketNum < mongo::Buckets; bucketNum++) {
                     DiskLoc dl = nsd->deletedList[bucketNum];
                     while (!dl.isNull()) {
@@ -521,10 +530,14 @@ namespace {
                     }
                 }
             }
+            if (deletedRecordsArrayBuilder.get() != NULL) {
+                deletedRecordsArrayBuilder->doneFast(); //TODO(andrea.lattuada) can be removed when
+                                                        //                      SERVER-7459 is fixed
+            }
         }
 
         DiskStorageData extentData(0);
-        {
+        { // ensure done() is called by invoking destructor when done with the builder
             BSONArrayBuilder chunkArrayBuilder (result.subarrayStart("chunks"));
             for (vector<DiskStorageData>::iterator it = chunkData.begin();
                  it != chunkData.end(); ++it) {
@@ -532,12 +545,12 @@ namespace {
                 killCurrentOp.checkForInterrupt();
                 extentData += *it;
                 BSONObjBuilder chunkBuilder;
-                it->appendToBSONObjBuilder(chunkBuilder, !isCapped);
+                it->appendToBSONObjBuilder(chunkBuilder, processingDeletedRecords);
                 chunkArrayBuilder.append(chunkBuilder.obj());
             }
-            chunkArrayBuilder.done();
-        }
-        extentData.appendToBSONObjBuilder(result, !isCapped);
+            chunkArrayBuilder.doneFast(); //TODO(andrea.lattuada) can be removed when
+        }                                 //                      SERVER-7459 is fixed
+        extentData.appendToBSONObjBuilder(result, processingDeletedRecords);
         return true;
     }
 
@@ -564,33 +577,34 @@ namespace {
 
         int extentPages = ceilingDiv(params.endOfs - params.startOfs, int(PAGE_SIZE));
         int extentInMemCount = 0;
-
-        BSONArrayBuilder arr(result.subarrayStart("chunks"));
-        int chunkLength = params.granularity;
-        for (int chunk = 0; chunk < params.numberOfChunks; ++chunk) {
-            if (chunk == params.numberOfChunks - 1) {
-                chunkLength = params.lastChunkLength;
-            }
-            int pagesInChunk = ceilingDiv(chunkLength, PAGE_SIZE);
-
-            char* firstPageAddr = startAddr + (chunk * params.granularity);
-            vector<bool> isInMem(pagesInChunk);
-            if (! ProcessInfo::pagesInMemory(firstPageAddr, pagesInChunk, isInMem)) {
-                errmsg = "system call failed";
-                return false;
-            }
-
-            int inMemCount = 0;
-            for (int page = 0; page < pagesInChunk; ++page) {
-                if (isInMem[page]) {
-                    inMemCount++;
-                    extentInMemCount++;
+        { // ensure done() is called by invoking destructor when done with the builder
+            BSONArrayBuilder arr(result.subarrayStart("chunks"));
+            int chunkLength = params.granularity;
+            for (int chunk = 0; chunk < params.numberOfChunks; ++chunk) {
+                if (chunk == params.numberOfChunks - 1) {
+                    chunkLength = params.lastChunkLength;
                 }
-            }
+                int pagesInChunk = ceilingDiv(chunkLength, PAGE_SIZE);
 
-            arr.append(double(inMemCount) / pagesInChunk);
+                char* firstPageAddr = startAddr + (chunk * params.granularity);
+                vector<bool> isInMem(pagesInChunk);
+                if (! ProcessInfo::pagesInMemory(firstPageAddr, pagesInChunk, isInMem)) {
+                    errmsg = "system call failed";
+                    return false;
+                }
+
+                int inMemCount = 0;
+                for (int page = 0; page < pagesInChunk; ++page) {
+                    if (isInMem[page]) {
+                        inMemCount++;
+                        extentInMemCount++;
+                    }
+                }
+
+                arr.append(double(inMemCount) / pagesInChunk);
+            }
+            arr.doneFast(); //TODO(andrea.lattuada) can be removed when SERVER-7459 is fixed
         }
-        arr.done();
         result.append("inMem", double(extentInMemCount) / extentPages);
 
         return true;
@@ -668,6 +682,8 @@ namespace {
                                                 extentBuilder);
                     }
                 }
+                extentsArrayBuilder.doneFast(); //TODO(andrea.lattuada) can be removed when
+                                                //                      SERVER-7459 is fixed
             }
         }
         if (!success) return false;
@@ -773,6 +789,11 @@ namespace {
         BSONElement characteristicFieldElm = cmdObj["characteristicField"];
         if (characteristicFieldElm.ok()) {
             params.characteristicField = characteristicFieldElm.valuestrsafe();
+        }
+
+        BSONElement processDeletedRecordsElm = cmdObj["processDeletedRecords"];
+        if (processDeletedRecordsElm.ok()) {
+            params.processDeletedRecords = processDeletedRecordsElm.trueValue();
         }
 
         params.showRecords = cmdObj["showRecords"].trueValue();
